# boot-assets

./: .gitignore  Cargo.toml  README.md  devenv.nix  upstream.toml
.github/workflows/: ci.yml  live-e2e.yml  release.yml  sync-binaries.yml
kernel/: Dockerfile
kernels/: Dockerfile
kernels/config/: amd64.config  arm64.config
patches/fex/: 0001-run-without-fexserver.patch  0002-tolerate-missing-procfs.patch
scripts/: build-alpine-initramfs.sh  build-alpine-rootfs.sh  build-kernel.sh  build-release.sh  download-kernel.sh
src/: asset_manager.rs  download.rs  error.rs  lib.rs  main.rs  manifest.rs  release.rs  rootfs.rs  upstream.rs  util.rs  verify_cache.rs
src/cli/: merge_manifest.rs  mod.rs  sync_binaries.rs
src/cmd/: build_fex_rootfs.rs  build_fex_runtime.rs  build_release.rs  build_rootfs.rs  merge_manifest.rs  mod.rs  sync_binaries.rs
tests/e2e/: boot.rs  live.rs  local.rs  main.rs  support.rs
