[package]
name = "boot-assets"
version = "0.1.0"
edition = "2024"

[features]
default = ["download", "build"]
# Enable async download + SHA256 verification (for daemon consumers).
download = ["dep:reqwest", "dep:sha2", "dep:tokio", "dep:futures-util"]
# Enable CLI build tools (rootfs builder, release assembler).
build = ["dep:clap", "dep:chrono", "dep:flate2", "dep:tar", "dep:tempfile", "dep:sha2", "dep:anyhow"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"

# download feature
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"], optional = true }
sha2 = { version = "0.10.9", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "rt", "macros"], optional = true }
futures-util = { version = "0.3", optional = true }

# build feature (CLI only)
anyhow = { version = "1.0.102", optional = true }
chrono = { version = "0.4.44", features = ["serde"], optional = true }
clap = { version = "4.5.60", features = ["derive"], optional = true }
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.44", optional = true }
tempfile = { version = "3.26.0", optional = true }
toml = { version = "1.0.3", features = ["parse"] }
