[package]
name = "arcbox-boot"
version = "0.5.1"
edition = "2024"
description = "Boot asset manifest types, asset manager, and CLI tools for ArcBox VM runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcboxlabs/boot-assets"
exclude = ["dev/", "build/", "dist/", "output/", "plan.boot.md"]

[features]
default = []
# Async asset manager + binary download for daemon consumers.
download = [
    "dep:reqwest",
    "dep:sha2",
    "dep:tokio",
    "dep:futures-util",
    "dep:dirs",
]
# CLI build tools (rootfs builder, release assembler). Includes download.
build = [
    "download",
    "dep:clap",
    "dep:chrono",
    "dep:flate2",
    "dep:tar",
    "dep:tempfile",
    "dep:anyhow",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"

# download feature
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
], optional = true }
sha2 = { version = "0.10.9", optional = true }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "rt",
    "macros",
], optional = true }
futures-util = { version = "0.3", optional = true }
dirs = { version = "6", optional = true }

# build feature (CLI only)
anyhow = { version = "1.0.102", optional = true }
chrono = { version = "0.4.44", features = ["serde"], optional = true }
clap = { version = "4.5.60", features = ["derive"], optional = true }
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.44", optional = true }
tempfile = { version = "3.27.0", optional = true }
toml = { version = "1.0.3", features = ["parse"] }

[[bin]]
name = "boot-assets"
path = "src/main.rs"
required-features = ["build"]
