[package]
name = "arcbox-boot"
version = "0.6.0"
edition = "2024"
description = "Boot asset manifest types, asset manager, and CLI tools for ArcBox VM runtime"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcboxlabs/boot-assets"
exclude = ["dev/", "build/", "dist/", "output/", "plan.boot.md"]

[features]
default = []
# Async asset manager + binary download for daemon consumers.
download = [
    "dep:camino",
    "dep:reqwest",
    "dep:sha2",
    "dep:tokio",
    "dep:futures-util",
    "dep:dirs",
    "dep:url",
]
# CLI build tools (rootfs builder, release assembler). Includes download.
build = [
    "download",
    "dep:clap",
    "dep:chrono",
    "dep:flate2",
    "dep:goblin",
    "dep:humansize",
    "dep:minijinja",
    "dep:tar",
    "dep:tempfile",
    "dep:anyhow",
    "dep:xshell",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"

# download feature
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
], optional = true }
sha2 = { version = "0.11.0", optional = true }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "rt",
    "macros",
], optional = true }
futures-util = { version = "0.3", optional = true }
dirs = { version = "6", optional = true }

# build feature (CLI only)
anyhow = { version = "1.0.102", optional = true }
camino = { version = "1.2.3", optional = true }
chrono = { version = "0.4.44", features = ["serde"], optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
flate2 = { version = "1.1.9", optional = true }
fs-err = "3.3.0"
goblin = { version = "0.10.7", default-features = false, features = [
    "std",
    "elf32",
    "elf64",
    "endian_fd",
], optional = true }
humansize = { version = "2.1.3", optional = true }
minijinja = { version = "2.21.0", optional = true }
tar = { version = "0.4.44", optional = true }
tempfile = { version = "3.27.0", optional = true }
url = { version = "2.5.8", optional = true }
xshell = { version = "0.2.7", optional = true }
toml = { version = "1.0.3", features = ["parse"] }

[dev-dependencies]
filetime = "0.2.29"
tempfile = "3.27.0"

[[bin]]
name = "boot-assets"
path = "src/main.rs"
required-features = ["build"]
